[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/UI/shop_screen.png" type="Texture" id=1]
[ext_resource path="res://ui/buy_ui/tower_buy_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/buy_ui/tower_buy_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/UI/shop_screen_button.png" type="Texture" id=4]
[ext_resource path="res://ui/upgrade_ui_new/upgrade_ui_new.gd" type="Script" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool grayscale = false;
uniform bool invalid = false;

void fragment() {
	COLOR.rgba = texture(TEXTURE,UV);
	
	if (invalid) {
	    COLOR.rgb = COLOR.rgb * vec3(1, 0.3, 0.3);
	}
	
    if (grayscale) {
        COLOR.rgb = vec3(dot(COLOR.rgb, vec3(0.299, 0.587, 0.114)));
    }
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/grayscale = false
shader_param/invalid = false

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/grayscale = false
shader_param/invalid = false

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/grayscale = false
shader_param/invalid = false

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/grayscale = false
shader_param/invalid = false

[node name="UpgradeUI" type="NinePatchRect"]
anchor_right = 0.986
anchor_bottom = 0.977
margin_right = -566.8
margin_bottom = -410.2
mouse_filter = 1
theme = SubResource( 1 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 800, 204 )
patch_margin_left = 43
patch_margin_right = 46
patch_margin_bottom = 43
script = ExtResource( 5 )

[node name="TextureRect" parent="." instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = -25.0
margin_right = 71.0
margin_bottom = 15.0

[node name="TowerBuyButton" parent="TextureRect" instance=ExtResource( 2 )]
material = SubResource( 3 )

[node name="Upgrades" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.943
margin_right = -1.0
margin_bottom = 0.0319977
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Upgrade1" parent="Upgrades" instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 145.0
margin_top = -70.0
margin_right = 185.0
margin_bottom = -30.0

[node name="TowerBuyButton" parent="Upgrades/Upgrade1" instance=ExtResource( 2 )]
material = SubResource( 4 )

[node name="Upgrade2" parent="Upgrades" instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 145.0
margin_top = -20.0
margin_right = 185.0
margin_bottom = 20.0

[node name="TowerBuyButton" parent="Upgrades/Upgrade2" instance=ExtResource( 2 )]
material = SubResource( 5 )

[node name="Upgrade3" parent="Upgrades" instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 145.0
margin_top = 30.0
margin_right = 185.0
margin_bottom = 70.0

[node name="TowerBuyButton" parent="Upgrades/Upgrade3" instance=ExtResource( 2 )]
material = SubResource( 6 )
margin_right = 43.8
margin_bottom = 38.72

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 36.0
margin_top = -12.0
margin_right = 76.0
margin_bottom = 28.0
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
